# Matrix-Decomposition-Implementations

./: .gitignore  ENHANCEMENT_SUGGESTIONS.md  Gram_Schmidt_QR_Decomposition.py  Householder_reflection.py  README.md  demo.sh  index.html  main.py  outlier_detection.py  parkinson_data_overview.py  pyproject.toml  sup.ipynb  svd_demo.py
.github/: renovate.json
.github/workflows/: deploy.yml
additional elements/: Householder_reflection.py  playground.py
apps/: Gram_Schmidt_QR_Decomposition.py
notebooks/: Gram_Schmidt_QR_Decomposition.py
template/: index.html.j2  tailwind.html.j2
templates/: README.md  tailwind.html.j2
