[project]
name = "matrix-decompositions-implementation-for-svd-pca"
version = "0.1.0"
description = "Scratch python implementations of matrix decomposition techniques used in scientific & engineering applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.14.17",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
